Enh: Mobile theme enhancements.  - Fix: Better Modal width calculation (Fixes an ee issue) on mobile  - Fix: Dropdown width issue on mobile

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -68,12 +68,12 @@ hr {
 @media (max-width:768px){
   .layout-nav-container {
     .left-navigation {
-      margin-bottom:0px;
+      margin-bottom:0;
     }
   }
 
   .layout-nav-container, .layout-content-container {
-    padding: 0px 15px;
+    padding: 0 15px;
   }
 }
 
